// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoCompleteItem #render() should render autocomplete item with active mode 1`] = `
<li
  className="ui-autocomplete-item ui-autocomplete-item_active"
  onClick={[Function]}
  role="option"
  tabIndex="-1"
>
  item
</li>
`;

exports[`AutoCompleteItem #render() should render autocomplete item with title mode 1`] = `
<li
  className="ui-autocomplete-item ui-autocomplete-item_title"
  role="option"
  tabIndex="-1"
>
  item
</li>
`;

exports[`AutoCompleteItem #render() should render correct autocomplete item 1`] = `
<li
  className="ui-autocomplete-item test-auto-complete-item"
  onClick={[Function]}
  role="option"
  tabIndex="-1"
>
  item
</li>
`;
